--- a/src/content/en/tools/workbox/reference-docs/latest/index-all.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/index-all.html
@@ -19,7 +19,7 @@
           <div class="symbol-detail-labels">
             <span class="label label-kind"><small>Version</small></span>
             &nbsp;&nbsp;&nbsp;
-            <span class="label label-version"><small>6.0.2</small></span>
+            <span class="label label-version"><small>6.1.1</small></span>
           </div>
           <ul>
             <li><a href="module-workbox-background-sync.html">module:workbox-background-sync</a></li>
@@ -89,6 +89,7 @@
             <li><a href="module-workbox-precaching.html#.PrecacheEntry">module:workbox-precaching.PrecacheEntry</a></li>
             <li><a href="module-workbox-precaching.PrecacheFallbackPlugin.html">module:workbox-precaching.PrecacheFallbackPlugin</a></li>
             <li><a href="module-workbox-precaching.PrecacheRoute.html">module:workbox-precaching.PrecacheRoute</a></li>
+            <li><a href="module-workbox-precaching.PrecacheRoute.html#setCatchHandler">module:workbox-precaching.PrecacheRoute#setCatchHandler</a></li>
             <li><a href="module-workbox-precaching.PrecacheStrategy.html">module:workbox-precaching.PrecacheStrategy</a></li>
             <li><a href="module-workbox-precaching.PrecacheStrategy.html#cacheName">module:workbox-precaching.PrecacheStrategy#cacheName</a></li>
             <li><a href="module-workbox-precaching.PrecacheStrategy.html#fetchOptions">module:workbox-precaching.PrecacheStrategy#fetchOptions</a></li>
@@ -114,10 +115,14 @@
             <li><a href="module-workbox-recipes.html#.offlineFallback">module:workbox-recipes.offlineFallback</a></li>
             <li><a href="module-workbox-recipes.html#.pageCache">module:workbox-recipes.pageCache</a></li>
             <li><a href="module-workbox-recipes.html#.staticResourceCache">module:workbox-recipes.staticResourceCache</a></li>
+            <li><a href="module-workbox-recipes.html#.warmStrategyCache">module:workbox-recipes.warmStrategyCache</a></li>
             <li><a href="module-workbox-routing.html">module:workbox-routing</a></li>
             <li><a href="module-workbox-routing.NavigationRoute.html">module:workbox-routing.NavigationRoute</a></li>
+            <li><a href="module-workbox-routing.NavigationRoute.html#setCatchHandler">module:workbox-routing.NavigationRoute#setCatchHandler</a></li>
             <li><a href="module-workbox-routing.RegExpRoute.html">module:workbox-routing.RegExpRoute</a></li>
+            <li><a href="module-workbox-routing.RegExpRoute.html#setCatchHandler">module:workbox-routing.RegExpRoute#setCatchHandler</a></li>
             <li><a href="module-workbox-routing.Route.html">module:workbox-routing.Route</a></li>
+            <li><a href="module-workbox-routing.Route.html#setCatchHandler">module:workbox-routing.Route#setCatchHandler</a></li>
             <li><a href="module-workbox-routing.Router.html">module:workbox-routing.Router</a></li>
             <li><a href="module-workbox-routing.Router.html#addCacheListener">module:workbox-routing.Router#addCacheListener</a></li>
             <li><a href="module-workbox-routing.Router.html#addFetchListener">module:workbox-routing.Router#addFetchListener</a></li>
