--- a/src/content/en/tools/workbox/reference-docs/latest/index.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/index.html
@@ -19,7 +19,7 @@
           <div class="symbol-detail-labels">
             <span class="label label-kind"><small>Version</small></span>
             &nbsp;&nbsp;&nbsp;
-            <span class="label label-version"><small>6.0.2</small></span>
+            <span class="label label-version"><small>6.1.1</small></span>
           </div>
           <div class="symbol-index">
             <section>
@@ -504,6 +504,9 @@
                     </p>
                   </div>
                   <div class="symbol-index-column">
+                    <p class="symbol-index-name">
+                      <a href="module-workbox-precaching.PrecacheRoute.html#setCatchHandler" class="!symbol-index-name">workbox-precaching.<wbr>PrecacheRoute#<wbr>setCatchHandler(handler)</a>
+                    </p>
                   </div>
                   <div class="symbol-index-column">
                   </div>
@@ -590,21 +593,24 @@
                     <p class="symbol-index-name">
                       <a href="module-workbox-recipes.html#.googleFontsCache" class="!symbol-index-name">workbox-recipes.<wbr>googleFontsCache(options)</a>
                     </p>
-                  </div>
-                  <div class="symbol-index-column">
                     <p class="symbol-index-name">
                       <a href="module-workbox-recipes.html#.imageCache" class="!symbol-index-name">workbox-recipes.<wbr>imageCache(options)</a>
                     </p>
+                  </div>
+                  <div class="symbol-index-column">
                     <p class="symbol-index-name">
                       <a href="module-workbox-recipes.html#.offlineFallback" class="!symbol-index-name">workbox-recipes.<wbr>offlineFallback(options)</a>
                     </p>
-                  </div>
-                  <div class="symbol-index-column">
                     <p class="symbol-index-name">
                       <a href="module-workbox-recipes.html#.pageCache" class="!symbol-index-name">workbox-recipes.<wbr>pageCache(options)</a>
                     </p>
                     <p class="symbol-index-name">
                       <a href="module-workbox-recipes.html#.staticResourceCache" class="!symbol-index-name">workbox-recipes.<wbr>staticResourceCache(options)</a>
+                    </p>
+                  </div>
+                  <div class="symbol-index-column">
+                    <p class="symbol-index-name">
+                      <a href="module-workbox-recipes.html#.warmStrategyCache" class="!symbol-index-name">workbox-recipes.<wbr>warmStrategyCache(options)</a>
                     </p>
                   </div>
                 </div>
@@ -651,6 +657,9 @@
                     </p>
                   </div>
                   <div class="symbol-index-column">
+                    <p class="symbol-index-name">
+                      <a href="module-workbox-routing.NavigationRoute.html#setCatchHandler" class="!symbol-index-name">workbox-routing.<wbr>NavigationRoute#<wbr>setCatchHandler(handler)</a>
+                    </p>
                   </div>
                   <div class="symbol-index-column">
                   </div>
@@ -667,6 +676,9 @@
                     </p>
                   </div>
                   <div class="symbol-index-column">
+                    <p class="symbol-index-name">
+                      <a href="module-workbox-routing.RegExpRoute.html#setCatchHandler" class="!symbol-index-name">workbox-routing.<wbr>RegExpRoute#<wbr>setCatchHandler(handler)</a>
+                    </p>
                   </div>
                   <div class="symbol-index-column">
                   </div>
@@ -683,6 +695,9 @@
                     </p>
                   </div>
                   <div class="symbol-index-column">
+                    <p class="symbol-index-name">
+                      <a href="module-workbox-routing.Route.html#setCatchHandler" class="!symbol-index-name">workbox-routing.<wbr>Route#<wbr>setCatchHandler(handler)</a>
+                    </p>
                   </div>
                   <div class="symbol-index-column">
                   </div>
