--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-routing.Route.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-routing.Route.html
@@ -20,7 +20,7 @@
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>6.0.2</small></span>
+              <span class="label label-version"><small>6.1.1</small></span>
             </div>
             <p>A <code>Route</code> consists of a pair of callback functions, &quot;match&quot; and &quot;handler&quot;.
               The &quot;match&quot; callback determine if a route should be used to &quot;handle&quot; a
@@ -82,6 +82,34 @@
             </section>
           </section>
           <section>
+            <h2>Method</h2>
+            <section>
+              <h3 id="setCatchHandler" class="symbol-name">setCatchHandler</h3>
+              <p class="type-signature"> setCatchHandler(handler)</p>
+              <section>
+                <table class="function param responsive">
+                  <tr>
+                    <th colspan="2">
+                      <h4>Parameter</h4>
+                    </th>
+                  </tr>
+                  <tbody>
+                    <tr>
+                      <td class="details-table-name">
+                        <p>handler</p>
+                      </td>
+                      <td>
+                        <p class="details-table-types">module:workbox-routing-handlerCallback</p>
+                        <p>A callback
+                          function that returns a Promise resolving to a Response</p>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </section>
+              <dl class="dl-compact">
+              </dl>
+            </section>
           </section>
         </div>
       </div>
