--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-strategies.Strategy.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-strategies.Strategy.html
@@ -20,7 +20,7 @@
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>6.0.2</small></span>
+              <span class="label label-version"><small>6.1.1</small></span>
             </div>
             <p>An abstract base class that all other strategy classes must extend from:</p>
           </header>
@@ -90,7 +90,8 @@
                                 <p class="details-table-types">Object</p>
                                 <p>Values passed along to the
                                   <a href="https://developer.mozilla.org/en-US/docs/Web/API/WindowOrWorkerGlobalScope/fetch#Parameters"><code>init</code></a>
-                                  of all fetch() requests made by this strategy.</p>
+                                  of <a href="https://github.com/GoogleChrome/workbox/issues/1796">non-navigation</a>
+                                  <code>fetch()</code> requests made by this strategy.</p>
                               </td>
                             </tr>
                             <tr>
