--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-webpack-plugin.GenerateSW.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-webpack-plugin.GenerateSW.html
@@ -20,7 +20,7 @@
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>6.0.2</small></span>
+              <span class="label label-version"><small>6.1.1</small></span>
             </div>
             <p>This class supports creating a new, ready-to-use service worker file as
               part of the webpack compilation process.</p>
@@ -279,7 +279,7 @@
                                 <p class="details-table-types">string</p>
                                 <p>If set to 'production', then an optimized service
                                   worker bundle that excludes debugging info will be produced. If not explicitly
-                                  configured here, the <code>mode</code> value configured in the current <code>webpack</code> compiltion
+                                  configured here, the <code>mode</code> value configured in the current <code>webpack</code> compilation
                                   will be used.</p>
                               </td>
                             </tr>
