--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-recipes_index.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-recipes_index.js.html
@@ -32,11 +32,12 @@ import { imageCache } from &#x27;./imageCache&#x27;;
 import { staticResourceCache } from &#x27;./staticResourceCache&#x27;;
 import { pageCache } from &#x27;./pageCache&#x27;;
 import { offlineFallback } from &#x27;./offlineFallback&#x27;;
+import { warmStrategyCache } from &#x27;./warmStrategyCache&#x27;;
 import &#x27;./_version.js&#x27;;
 /**
  * @module workbox-recipes
  */
-export { googleFontsCache, imageCache, staticResourceCache, pageCache, offlineFallback };
+export { googleFontsCache, imageCache, staticResourceCache, pageCache, offlineFallback, warmStrategyCache };
 </code></pre>
           </article>
         </div>
