--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-strategies_NetworkOnly.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-strategies_NetworkOnly.js.html
@@ -54,7 +54,8 @@ class NetworkOnly extends Strategy {
      * to use in conjunction with this caching strategy.
      * @param {Object} [options.fetchOptions] Values passed along to the
      * [&#x60;init&#x60;](https://developer.mozilla.org/en-US/docs/Web/API/WindowOrWorkerGlobalScope/fetch#Parameters)
-     * of all fetch() requests made by this strategy.
+     * of [non-navigation](https://github.com/GoogleChrome/workbox/issues/1796)
+     * &#x60;fetch()&#x60; requests made by this strategy.
      * @param {number} [options.networkTimeoutSeconds] If set, any network requests
      * that fail to respond within the timeout will result in a network error.
      */
