--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-webpack-plugin_src_generate-sw.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-webpack-plugin_src_generate-sw.js.html
@@ -151,7 +151,7 @@ class GenerateSW {
    *
    * @param {string} [config.mode] If set to &#x27;production&#x27;, then an optimized service
    * worker bundle that excludes debugging info will be produced. If not explicitly
-   * configured here, the &#x60;mode&#x60; value configured in the current &#x60;webpack&#x60; compiltion
+   * configured here, the &#x60;mode&#x60; value configured in the current &#x60;webpack&#x60; compilation
    * will be used.
    *
    * @param {object&amp;lt;string, string&gt;} [config.modifyURLPrefix] A mapping of prefixes
