--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-background-sync_Queue.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-background-sync_Queue.js.html
@@ -280,7 +280,7 @@ class Queue {
      */
     async replayRequests() {
         let entry;
-        while (entry &#x3D; await this.shiftRequest()) {
+        while ((entry &#x3D; await this.shiftRequest())) {
             try {
                 await fetch(entry.request.clone());
                 if (process.env.NODE_ENV !&#x3D;&#x3D; &#x27;production&#x27;) {
