--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-recipes_imageCache.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-recipes_imageCache.js.html
@@ -27,6 +27,7 @@
   license that can be found in the LICENSE file or at
   https://opensource.org/licenses/MIT.
 */
+import { warmStrategyCache } from &#x27;./warmStrategyCache&#x27;;
 import { registerRoute } from &#x27;workbox-routing/registerRoute.js&#x27;;
 import { CacheFirst } from &#x27;workbox-strategies/CacheFirst.js&#x27;;
 import { CacheableResponsePlugin } from &#x27;workbox-cacheable-response/CacheableResponsePlugin.js&#x27;;
@@ -39,8 +40,11 @@ import &#x27;./_version.js&#x27;;
  *
  * @param {Object} [options]
  * @param {string} [options.cacheName] Name for cache. Defaults to images
+* @param {RouteMatchCallback} [options.matchCallback] Workbox callback function to call to match to. Defaults to request.destination &#x3D;&#x3D;&#x3D; &#x27;image&#x27;;
  * @param {number} [options.maxAgeSeconds] Maximum age, in seconds, that font entries will be cached for. Defaults to 30 days
  * @param {number} [options.maxEntries] Maximum number of images that will be cached. Defaults to 60
+ * @param {WorkboxPlugin[]} [options.plugins] Additional plugins to use for this recipe
+ * @param {string[]} [options.warmCache] Paths to call to use to warm this cache
  */
 function imageCache(options &#x3D; {}) {
     const defaultMatchCallback &#x3D; ({ request }) &#x3D;&gt; request.destination &#x3D;&#x3D;&#x3D; &#x27;image&#x27;;
@@ -48,18 +52,23 @@ function imageCache(options &#x3D; {}) {
     const matchCallback &#x3D; options.matchCallback || defaultMatchCallback;
     const maxAgeSeconds &#x3D; options.maxAgeSeconds || 30 * 24 * 60 * 60;
     const maxEntries &#x3D; options.maxEntries || 60;
-    registerRoute(matchCallback, new CacheFirst({
-        cacheName,
-        plugins: [
-            new CacheableResponsePlugin({
-                statuses: [0, 200],
-            }),
-            new ExpirationPlugin({
-                maxEntries,
-                maxAgeSeconds
-            }),
-        ],
+    const plugins &#x3D; (options.plugins || []);
+    plugins.push(new CacheableResponsePlugin({
+        statuses: [0, 200],
     }));
+    plugins.push(new ExpirationPlugin({
+        maxEntries,
+        maxAgeSeconds
+    }));
+    const strategy &#x3D; new CacheFirst({
+        cacheName,
+        plugins,
+    });
+    registerRoute(matchCallback, strategy);
+    // Warms the cache
+    if (options.warmCache) {
+        warmStrategyCache({ urls: options.warmCache, strategy });
+    }
 }
 export { imageCache };
 </code></pre>
