--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-recipes_offlineFallback.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-recipes_offlineFallback.js.html
@@ -44,16 +44,30 @@ function offlineFallback(options &#x3D; {}) {
     const pageFallback &#x3D; options.pageFallback || &#x27;offline.html&#x27;;
     const imageFallback &#x3D; options.imageFallback || false;
     const fontFallback &#x3D; options.fontFallback || false;
+    self.addEventListener(&#x27;install&#x27;, event &#x3D;&gt; {
+        const files &#x3D; [pageFallback];
+        if (imageFallback) {
+            files.push(imageFallback);
+        }
+        if (fontFallback) {
+            files.push(fontFallback);
+        }
+        event.waitUntil(self.caches.open(&#x27;workbox-offline-fallbacks&#x27;).then(cache &#x3D;&gt; cache.addAll(files)));
+    });
     const handler &#x3D; async (options) &#x3D;&gt; {
         const dest &#x3D; options.request.destination;
+        const cache &#x3D; await self.caches.open(&#x27;workbox-offline-fallbacks&#x27;);
         if (dest &#x3D;&#x3D;&#x3D; &quot;document&quot;) {
-            return (await matchPrecache(pageFallback)) || Response.error();
+            const match &#x3D; await matchPrecache(pageFallback) || await cache.match(pageFallback);
+            return match || Response.error();
         }
         if (dest &#x3D;&#x3D;&#x3D; &quot;image&quot; &amp;amp;&amp;amp; imageFallback !&#x3D;&#x3D; false) {
-            return (await matchPrecache(imageFallback)) || Response.error();
+            const match &#x3D; await matchPrecache(imageFallback) || await cache.match(imageFallback);
+            return match || Response.error();
         }
         if (dest &#x3D;&#x3D;&#x3D; &quot;font&quot; &amp;amp;&amp;amp; fontFallback !&#x3D;&#x3D; false) {
-            return (await matchPrecache(fontFallback)) || Response.error();
+            const match &#x3D; await matchPrecache(fontFallback) || await cache.match(fontFallback);
+            return match || Response.error();
         }
         return Response.error();
     };
