--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-recipes_pageCache.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-recipes_pageCache.js.html
@@ -27,6 +27,7 @@
   license that can be found in the LICENSE file or at
   https://opensource.org/licenses/MIT.
 */
+import { warmStrategyCache } from &#x27;./warmStrategyCache&#x27;;
 import { registerRoute } from &#x27;workbox-routing/registerRoute.js&#x27;;
 import { NetworkFirst } from &#x27;workbox-strategies/NetworkFirst.js&#x27;;
 import { CacheableResponsePlugin } from &#x27;workbox-cacheable-response/CacheableResponsePlugin.js&#x27;;
@@ -40,21 +41,29 @@ import &#x27;./_version.js&#x27;;
  * @param {string} [options.cacheName] Name for cache. Defaults to pages
  * @param {RouteMatchCallback} [options.matchCallback] Workbox callback function to call to match to. Defaults to request.mode &#x3D;&#x3D;&#x3D; &#x27;navigate&#x27;;
  * @param {number} [options.networkTimoutSeconds] Maximum amount of time, in seconds, to wait on the network before falling back to cache. Defaults to 3
+ * @param {WorkboxPlugin[]} [options.plugins] Additional plugins to use for this recipe
+ * @param {string[]} [options.warmCache] Paths to call to use to warm this cache
  */
 function pageCache(options &#x3D; {}) {
     const defaultMatchCallback &#x3D; ({ request }) &#x3D;&gt; request.mode &#x3D;&#x3D;&#x3D; &#x27;navigate&#x27;;
     const cacheName &#x3D; options.cacheName || &#x27;pages&#x27;;
     const matchCallback &#x3D; options.matchCallback || defaultMatchCallback;
     const networkTimeoutSeconds &#x3D; options.networkTimeoutSeconds || 3;
-    registerRoute(matchCallback, new NetworkFirst({
+    const plugins &#x3D; (options.plugins || []);
+    plugins.push(new CacheableResponsePlugin({
+        statuses: [0, 200],
+    }));
+    const strategy &#x3D; new NetworkFirst({
         networkTimeoutSeconds,
         cacheName,
-        plugins: [
-            new CacheableResponsePlugin({
-                statuses: [0, 200],
-            }),
-        ],
-    }));
+        plugins,
+    });
+    // Registers the route
+    registerRoute(matchCallback, strategy);
+    // Warms the cache
+    if (options.warmCache) {
+        warmStrategyCache({ urls: options.warmCache, strategy });
+    }
 }
 export { pageCache };
 </code></pre>
