--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-recipes_staticResourceCache.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-recipes_staticResourceCache.js.html
@@ -27,6 +27,7 @@
   license that can be found in the LICENSE file or at
   https://opensource.org/licenses/MIT.
 */
+import { warmStrategyCache } from &#x27;./warmStrategyCache&#x27;;
 import { registerRoute } from &#x27;workbox-routing/registerRoute.js&#x27;;
 import { StaleWhileRevalidate } from &#x27;workbox-strategies/StaleWhileRevalidate.js&#x27;;
 import { CacheableResponsePlugin } from &#x27;workbox-cacheable-response/CacheableResponsePlugin.js&#x27;;
@@ -38,19 +39,27 @@ import &#x27;./_version.js&#x27;;
  *
  * @param {Object} [options]
  * @param {string} [options.cacheName] Name for cache. Defaults to static-resources
+ * @param {RouteMatchCallback} [options.matchCallback] Workbox callback function to call to match to. Defaults to request.destination &#x3D;&#x3D;&#x3D; &#x27;style&#x27; || request.destination &#x3D;&#x3D;&#x3D; &#x27;script&#x27; || request.destination &#x3D;&#x3D;&#x3D; &#x27;worker&#x27;;
+ * @param {WorkboxPlugin[]} [options.plugins] Additional plugins to use for this recipe
+ * @param {string[]} [options.warmCache] Paths to call to use to warm this cache
  */
 function staticResourceCache(options &#x3D; {}) {
     const defaultMatchCallback &#x3D; ({ request }) &#x3D;&gt; request.destination &#x3D;&#x3D;&#x3D; &#x27;style&#x27; || request.destination &#x3D;&#x3D;&#x3D; &#x27;script&#x27; || request.destination &#x3D;&#x3D;&#x3D; &#x27;worker&#x27;;
     const cacheName &#x3D; options.cacheName || &#x27;static-resources&#x27;;
     const matchCallback &#x3D; options.matchCallback || defaultMatchCallback;
-    registerRoute(matchCallback, new StaleWhileRevalidate({
-        cacheName,
-        plugins: [
-            new CacheableResponsePlugin({
-                statuses: [0, 200],
-            }),
-        ],
+    const plugins &#x3D; (options.plugins || []);
+    plugins.push(new CacheableResponsePlugin({
+        statuses: [0, 200],
     }));
+    const strategy &#x3D; new StaleWhileRevalidate({
+        cacheName,
+        plugins,
+    });
+    registerRoute(matchCallback, strategy);
+    // Warms the cache
+    if (options.warmCache) {
+        warmStrategyCache({ urls: options.warmCache, strategy });
+    }
 }
 export { staticResourceCache };
 </code></pre>
